# uc

./: .gitignore  LICENSE  MVP.md  README.md  build-android.bat  build.js  mk-linux.sh  mkdarwin.sh  package-lock.json  package.json  run-ios.sh  run-win.bat  rundarwin.sh  socket.ini
assets/bootstrap/: boot.html
cmakelists/darwin/: CMakeLists.txt
cmakelists/linux/: CMakeLists.txt
cxx/: filesystem.cpp  filesystem.hpp  rectavalo.cpp  rectavalo.hpp  rectavalo_io.cpp  rectavalo_io.hpp
darwin/: run.sh
darwin/apptemplate/: WebViewWindow.h  WebViewWindow.mm  main.mm
linux/: main.cpp  webview.hpp
mobile/: .gitignore  App.tsx  Rectavalo.ts  RectavaloWebView.js  metro.config.js  package-lock.json  package.json
mobile/android/: build.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/debug/java/com/mobile/: ReactNativeFlipper.java
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/cpp/: CMakeLists.txt
mobile/android/app/src/main/java/com/example/uc/: MainActivity.java  MainApplication.java  MyAppPackage.java
mobile/android/app/src/main/java/com/rectavalo/: RectavaloModule.java  RectavaloPackage.java
mobile/android/app/src/release/java/com/mobile/: ReactNativeFlipper.java
mobile/ios/: Podfile
mobile/ios/Rectavalo/: RCTRectavaloModule.h  RCTRectavaloModule.mm  Rectavalo.podspec
mobile/ios/mobile/: AppDelegate.mm
mobile/ios/mobile.xcodeproj/: project.pbxproj
react-app/: package-lock.json  package.json
react-app/src/: App.jsx  App.scss  RectavaloWeb.js  index.jsx  stubs.jsx
react-app/src/api/: DirectoryListData.js  FileSystem.js
react-app/src/components/: CommandBar.jsx  CommandBar.scss  CommandBarSubMenu.jsx  Commander.jsx  Commander.scss  DirectoryEntry.jsx  DirectoryListViewer.jsx  DirectoryListViewer.scss  DirectoryListViewerBar.jsx  DirectoryListViewerBar.scss  PanelView.jsx  SettingsModal.jsx  SettingsModal.scss  SplashScreen.scss  ViewFileModal.jsx  ViewFileModal.scss
react-app/src/components/mobile/: MobileCommandBar.scss  MobileDirectoryListViewer.jsx  MobileDirectoryListViewer.scss  MobilePanelView.jsx  MobilePanelView.scss  MobileViewerDivider.jsx  MobileViewerDivider.scss
react-app/src/data/: dividerLinks.jsx
react-app/src/helpers/: fileSystem.js
react-app/src/hooks/: useAppLoad.js  useCursorHandlers.js  useKeyboardEvents.js  useMenuShortcuts.js  useSmoothScroll.js
react-app/src/rectavalo/: FileSystem.js  Path.js  stubs.jsx  sys.js
react-app/src/state/: apiCalls.js  store.js
react-app/src/state/slices/: directoryList.js  fileExplorer.js  mobilePlatformsSlice.js  modalsSlice.js  platformsSlice.js
scripts/: build-constants.js  helpers.js  react-app-commands.js  release.js  xcode-bundle.sh
src/: App.jsx  App.scss  index.html  index.jsx
src/api/: DirectoryListData.js  FileViewerData.js  README.md
src/components/: CommandBar.jsx  CommandBar.scss  CommandBarSubMenu.jsx  CommandBarSubMenu.scss  Commander.jsx  Commander.scss  DirectoryEntry.jsx  DirectoryListViewer.jsx  DirectoryListViewer.scss  DirectoryListViewerBar.jsx  DirectoryListViewerBar.scss  FileViewer.jsx  FileViewer.scss  FileViewerBar.jsx  FileViewerBar.scss  FileViewerEntry.jsx  FilesViewer.jsx  FilesViewer.scss  PanelView.jsx  PanelView.scss  SearchBar.jsx  SearchBar.scss  SettingsModal.jsx  SettingsModal.scss  SplashScreen.jsx  Taskbar.jsx  Taskbar.scss  ViewFileModal.jsx  ViewFileModal.scss  ViewerDivider.jsx  ViewerDivider.scss  index.js
src/components/mobile/: MobileCommandBar.jsx  MobileCommandBar.scss  MobileDirectoryListViewer.jsx  MobileDirectoryListViewer.scss  MobilePanelView.jsx  MobilePanelView.scss  index.js
src/data/: comandBarSubMenuLinks.jsx  commandBarLinks.jsx
src/helpers/: fileSystem.js  keyboardUtilis.js
src/hooks/: useActions.js  useAppLoad.js  useMenuShortcuts.js  useSmoothScroll.js
src/state/: store.js
src/state/slices/: directoryList.js  fileExplorer.js  modalsSlice.js
src/utils/: reload.js
win32/: Win32WebView.filters  Win32WebView.sln  Win32WebView.vcxproj  Win32WebView.vcxproj.filters  build.bat  main.cpp
